<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
   
    <string name="intro_friendly_text_view">Were they friendly?</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_option_text_view">Option</string>
    
    <string name="available_text_view">Available</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">OK</string>
    <string name="available_good_radiobutton">Good</string>
    
    <string name="time_waiting_text">Time Waiting for Service</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>
    
    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>Good</item>
    </string-array>

</resources>
