<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="17dp"
        android:text="@string/intro_friendly_text_view" />

    <CheckBox
        android:id="@+id/friendlyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/IntroTextView"
        android:text="@string/intro_friendly_text_view" />

    <CheckBox
        android:id="@+id/specialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_below="@+id/optionCheckBox"
        android:text="@string/intro_specials_text_view" />

    <CheckBox
        android:id="@+id/optionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/specialCheckBox"
        android:layout_below="@+id/friendlyCheckBox"
        android:text="@string/intro_option_text_view" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/specialCheckBox"
        android:layout_below="@+id/specialCheckBox"
        android:text="@string/available_text_view" />

    <RadioGroup
        android:id="@+id/availbleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:orientation="horizontal" >
        
        <RadioButton
            android:id="@+id/availableGoodRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_good_radiobutton" />

        <RadioButton
            android:id="@+id/availableOKRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/available_ok_radiobutton" />

        <RadioButton
            android:id="@+id/availableBadRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_bad_radiobutton" />


    </RadioGroup>

    <Spinner
        android:id="@+id/problemsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/availbleRadioGroup"
        android:layout_below="@+id/availbleRadioGroup"
        android:layout_marginTop="19dp"
        android:entries="@array/problem_solving"/>
         

    <TextView
        android:id="@+id/timeWaitingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/problemsSpinner"
        android:layout_below="@+id/problemsSpinner"
        android:layout_marginTop="17dp"
        android:text="@string/time_waiting_text" />

    <Button
        android:id="@+id/startChronometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeWaitingTextView"
        android:layout_below="@+id/timeWaitingChronometer"
        android:text="@string/start_chronometer_button" />

    <Button
        android:id="@+id/pauseChonometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startChronometerButton"
        android:layout_alignBottom="@+id/startChronometerButton"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/pause_chronometer_button" />

    <Button
        android:id="@+id/resetChronometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseChonometerButton"
        android:layout_alignBottom="@+id/pauseChonometerButton"
        android:layout_toRightOf="@+id/pauseChonometerButton"
        android:text="@string/reset_chronometer_button" />

    <Chronometer
        android:id="@+id/timeWaitingChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/timeWaitingTextView"
        android:layout_toRightOf="@+id/friendlyCheckBox"
        android:text="Chronometer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/timeWaitingTextView"
        android:text="Score >>" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/problemsSpinner"
        android:text="0.0" />

</RelativeLayout>
